--- a/pages/form.html
+++ b/pages/form.html
@@ -21,6 +21,7 @@
             <div>
                 <label for="email">email input type:</label>
                 <input type = "email" id="email" name="email" required>
+                <error-output class = "email-error" for = "email"></error-output>
             </div>
             <div>
                 <label for="url">url input type:</label>
@@ -68,5 +69,13 @@
                 textError.textContent = "";
                 else textError.textContent = "Name is Incorrect";
             });
+            const email = document.querySelector('#email');
+            const emailError = document.querySelector('.email-error');
+            email.addEventListener('input',function(){
+                let emailRegex = RegExp('^([a-z]+)([0-9])*([_+-.]{1}[a-z0-9]+)*(@)([a-z0-9]+)[.]([a-z]{2,})([.][a-z]{2}){0,1}$');
+                if(emailRegex.test(email.value))
+                emailError.textContent = "";
+                else emailError.textContent = "Email is Incorrect";
+            })
         </script>
     </body>
