[Shubham]Added: Phone number validation

--- a/pages/form.html
+++ b/pages/form.html
@@ -34,6 +34,7 @@
             <div>
                 <label for="tel">tel input type:</label>
                 <input type = "tel" id="tel" name="tel" required>
+                <error-output class = "tel-error" for = "tel"></error-output>
             </div>
             <div>
                 <label for="search">search input type:</label>
@@ -76,6 +77,14 @@
                 if(emailRegex.test(email.value))
                 emailError.textContent = "";
                 else emailError.textContent = "Email is Incorrect";
-            })
+            });
+            const tel = document.querySelector('#tel');
+            const telError = document.querySelector('.tel-error');
+            tel.addEventListener('input', function(){
+                let telRegex = RegExp('^[1-9]{1}[0-9]{1}(\\s)[1-9]{1}[0-9]{9}$');
+                if(telRegex.test(tel.value))
+                telError.textContent="";
+                else telError.textContent = "Phone number is Incorrect";
+            });
         </script>
     </body>
