--- a/pages/form.html
+++ b/pages/form.html
@@ -90,7 +90,7 @@
             const password = document.querySelector('#pwd');
             const passwordError = document.querySelector('.pwd-error');
             password.addEventListener('input',function(){
-                let passwordRegex = RegExp("^[a-zA-Z0-9\\W]{8,}");
+                let passwordRegex = RegExp("^(?=.*\\d)(?=.*[A-Z])(?=.*\\W)(?!.*\\W\\w*\\W)(?!.*\\s).{8,}$");
                 if(passwordRegex.test(password.value))
                 passwordError.textContent="";
                 else passwordError.textContent = "Invalid Password";
